# so_many_test_projects_cant_even

./: .gitignore  package.json  svelte.config.js  tsconfig.json
src/: app.css  app.scss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: command_utils.rs  mod.rs  node_commands.rs  node_visual_commands.rs  rocks_basic_commands.rs  sqlite_commands.rs
src-tauri/src/commands/model_commands/: category_commands.rs  comment_commands.rs  image_commands.rs  mod.rs  node_category_commands.rs  node_commands.rs  node_comment_commands.rs  node_image_commands.rs  tag_commands.rs
src-tauri/src/connection/: connection_common.rs  mod.rs  rocks_connection.rs  sqlite_connection.rs
src-tauri/src/misc/: directories.rs  logging.rs  mod.rs  time_management.rs
src-tauri/src/model/: category.rs  comment.rs  image.rs  mod.rs  model_common.rs  node.rs  node_category.rs  node_comment.rs  node_image.rs  node_tag.rs  tag.rs
src-tauri/src/model/hybrids/: mod.rs  node_visual.rs
src-tauri/src/ui/: menu.rs
src-tauri/tests/: mod.rs  test_misc.rs
src-tauri/tests/database_interactions/: mod.rs  test_category.rs  test_comment.rs  test_image.rs  test_node.rs  test_node_category.rs  test_node_comment.rs  test_node_image.rs  test_node_visual.rs  test_tag.rs  testing_utilities.rs
src/lib/: CategoryDropdown.svelte  CategoryToggle.svelte  Greet.svelte  Home.svelte  NavBar.svelte  NodeCategoryDropdown.svelte  NodeCategoryToggle.svelte  OverviewSidePanel.svelte  log.ts  tauriMenu.ts
(+17 files in other folders)
